# AutoCode

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README_CN.md  TROUBLESHOOTING.md  pyproject.toml  settings.json
.claude-plugin/: plugin.json
.github/instructions/: AGENTS.md
.github/workflows/: ci.yml
agents/: autocode-idea-auditor.md  autocode-package-auditor.md  autocode-solution-auditor.md  autocode-workflow.md
autocode_mcp/src/autocode_mcp/: __init__.py  server.py
autocode_mcp/tests/test_tools/: test_checker.py  test_file_ops.py  test_generator.py  test_interactor.py  test_problem.py  test_solution.py  test_validator.py
examples/checker-sample/: autocode.json
examples/checker-sample/statements/: README.md  tutorial.md
examples/exact-sample/: autocode.json
examples/exact-sample/statements/: README.md  tutorial.md
examples/interactive-sample/: autocode.json
examples/interactive-sample/statements/: README.md  tutorial.md
hooks/: hooks.json  workflow_guard.py
openspec/: config.yaml
problems/tower_construction/: pack_polygon.bat  pack_polygon.py  problem.xml
problems/trade_zone/: problem.xml
scripts/: hook_gates.py  hook_payload.py  hook_state.py  sync_plugin_version.py  workflow_guard.py
skills/agent-skill-governance/: SKILL.md
skills/autocode-workflow/: SKILL.md
skills/idea-feasibility/: SKILL.md
skills/problem-difficulty-rating/: SKILL.md
skills/problem-validate/: SKILL.md  reference.md
skills/solution-complexity-audit/: SKILL.md
skills/statement-audit/: SKILL.md
skills/stress-strategy/: SKILL.md
skills/testdata-quality/: SKILL.md
src/autocode_mcp/: __init__.py  runtime_store.py  server.py
tests/: README.md  test_audit.py  test_cache.py  test_compiler.py  test_e2e_examples.py  test_e2e_mcp.py  test_input_schema.py  test_manifest_load.py  test_mixins.py  test_packaging.py  test_packaging_smoke.py  test_plugin_manifest.py  test_process.py  test_prompts.py  test_prompts_consistency.py  test_resource_limit.py  test_server.py  test_validation.py  test_win_job.py  test_workflow_guard.py
tests/scripts/: conftest.py  test_hook_gates.py  test_hook_payload.py  test_hook_state.py  test_manifest_dedup.py
tests/test_tools/: __init__.py  test_checker.py  test_complexity.py  test_file_ops.py  test_generator.py  test_interactor.py  test_problem.py  test_solution.py  test_stress_test.py  test_validator.py
(+169 files in other folders)
